@@ -33,7 +33,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.cluster.routing.allocation.DiskThresholdSettings.CLUSTER_ROUTING_ALLOCATION_DISK_FLOOD_STAGE_WATERMARK_SETTING;
 import static org.elasticsearch.cluster.routing.allocation.DiskThresholdSettings.CLUSTER_ROUTING_ALLOCATION_HIGH_DISK_WATERMARK_SETTING;
@@ -81,7 +80,7 @@ public class MockDiskUsagesIT extends ESIntegTestCase {
             .getRoutingNodes()
             .stream()
             .map(RoutingNode::nodeId)
-            .collect(Collectors.toList());
+            .toList();
 
         final MockInternalClusterInfoService clusterInfoService = getMockInternalClusterInfoService();
         clusterInfoService.setUpdateFrequency(TimeValue.timeValueMillis(200));
@@ -161,7 +160,7 @@ public class MockDiskUsagesIT extends ESIntegTestCase {
             .getRoutingNodes()
             .stream()
             .map(RoutingNode::nodeId)
-            .collect(Collectors.toList());
+            .toList();
 
         final MockInternalClusterInfoService clusterInfoService = getMockInternalClusterInfoService();
         clusterInfoService.setUpdateFrequency(TimeValue.timeValueMillis(200));
@@ -287,7 +286,7 @@ public class MockDiskUsagesIT extends ESIntegTestCase {
             .getRoutingNodes()
             .stream()
             .map(RoutingNode::nodeId)
-            .collect(Collectors.toList());
+            .toList();
 
         assertAcked(prepareCreate("test").setSettings(Settings.builder().put("number_of_shards", 6).put("number_of_replicas", 0)));
 
@@ -351,7 +350,7 @@ public class MockDiskUsagesIT extends ESIntegTestCase {
             .getRoutingNodes()
             .stream()
             .map(RoutingNode::nodeId)
-            .collect(Collectors.toList());
+            .toList();
 
         internalCluster().getCurrentMasterNodeInstance(ClusterService.class).addListener(event -> {
             assertThat(event.state().getRoutingNodes().node(nodeIds.get(2)).size(), lessThanOrEqualTo(1));
@@ -464,7 +463,7 @@ public class MockDiskUsagesIT extends ESIntegTestCase {
             .getRoutingNodes()
             .stream()
             .map(RoutingNode::nodeId)
-            .collect(Collectors.toList());
+            .toList();
 
         assertAcked(prepareCreate("test").setSettings(Settings.builder().put("number_of_shards", 6).put("number_of_replicas", 0)));
 
